fix some spacing

--- a/base.css
+++ b/base.css
@@ -19,6 +19,11 @@ body {
   color: #525252;
 }
 
+.row {
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
 .grey-background {
   background-color: #fbfbfb;
 }
@@ -79,6 +84,8 @@ h3 {
   font-family: FreightSansProMedium;
   font-size: 20px;
   text-transform: uppercase;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .rectangle-tan {
